# Camelid-Enterprise

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/engine-core/: Cargo.toml
crates/engine-core/src/: error.rs  gguf.rs  host.rs  lib.rs  tokenizer.rs  tokenizer_mark_ranges.rs.inc
crates/engine-core/src/forward/: compute.rs  kv_cache.rs  mod.rs  rope.rs
crates/engine-core/src/model/: binding.rs  config.rs  mod.rs  weights.rs
crates/engine-core/src/tensor/: blocks.rs  mod.rs  q8_dot.rs  store.rs
crates/engine-core/tests/: dequant_fixtures.rs  nvfp4_e4b_spotcheck.rs  nvfp4_format.rs  tensor_primitives.rs  tensor_store.rs
crates/engine-core/tests/fixtures/dequant/: F16.json  F32.json  Q4_0.json  Q4_K.json  Q5_K.json  Q6_K.json  Q8_0.json  bf16_exact.json  manifest.json  nvfp4_decode_table.json  nvfp4_e4b_spotcheck.json  nvfp4_encode_vectors.json  nvfp4_real_blocks.json  nvfp4_ue4m3_table.json
crates/engine-linux/: Cargo.toml
crates/engine-linux/src/: lib.rs
crates/engine-macos/: Cargo.toml
crates/engine-macos/src/: lib.rs  q8_dot.rs
crates/engine-macos/tests/: forward_neon.rs
crates/engine-windows/: Cargo.toml
crates/engine-windows/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: attribution.rs  lane.rs  main.rs
deploy/: README.md
deploy/docker/: Dockerfile
deploy/k8s/: deployment.yaml  service.yaml
src/: attribution.rs  main.rs
