[package]
name = "camelid-enterprise"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Multi-tenant serving distribution of the Camelid inference engine. This release ships the deterministic lane."
repository = "https://github.com/timtoole02/Camelid-Enterprise"

[dependencies]
# The engine. Pinned by revision: the deterministic lane's output guarantee is
# stated against exactly this engine version, so the pin is part of the contract.
camelid = { git = "https://github.com/timtoole02/Camelid", rev = "b4e3a9056567ed8145fc4fa29850d6f1f261ac2b" }

axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "io-util", "time"] }
clap = { version = "4", features = ["derive", "env"] }
serde_json = "1"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
# Identical to the engine's own release profile, so the engine dependency
# compiles under the settings it was written and tuned for.
lto = "fat"
codegen-units = 1
