[workspace]
resolver = "2"
members = [
    "crates/engine-core",
    "crates/engine-macos",
    "crates/engine-linux",
    "crates/engine-windows",
    "crates/server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/timtoole02/Camelid-Enterprise"

[workspace.dependencies]
engine-core = { path = "crates/engine-core", package = "camelid-enterprise-engine-core" }
engine-macos = { path = "crates/engine-macos", package = "camelid-enterprise-engine-macos" }
engine-linux = { path = "crates/engine-linux", package = "camelid-enterprise-engine-linux" }
engine-windows = { path = "crates/engine-windows", package = "camelid-enterprise-engine-windows" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[profile.release]
# Identical to the engine's own release profile, so the engine dependency
# compiles under the settings it was written and tuned for.
lto = "fat"
codegen-units = 1
