[package]
name = "camelid-enterprise"
description = "Multi-tenant serving distribution of the Camelid inference engine. This release ships the deterministic lane."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "camelid-enterprise"
path = "src/main.rs"

[dependencies]
# The engine. Pinned by revision: the deterministic lane's behavior is stated
# against exactly this engine version, so the pin is part of the contract.
camelid = { git = "https://github.com/timtoole02/Camelid", rev = "b4e3a9056567ed8145fc4fa29850d6f1f261ac2b" }

engine-core.workspace = true
serde_json.workspace = true

axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "io-util", "time"] }
clap = { version = "4", features = ["derive", "env"] }
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "macos")'.dependencies]
engine-macos.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
engine-linux.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
engine-windows.workspace = true
